--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,7 +4,10 @@
   "version": "1.0.0",
   "description": "Automatically generate chapters for YouTube videos using AI",
   "permissions": ["activeTab", "storage"],
-  "host_permissions": ["https://www.youtube.com/*"],
+  "host_permissions": [
+    "https://www.youtube.com/*",
+    "https://new-ycg.vercel.app/*"
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -23,5 +26,8 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
   }
 } 
