--- a/vercel.json
+++ b/vercel.json
@@ -21,5 +21,6 @@
         { "key": "Access-Control-Allow-Headers", "value": "Content-Type,Accept" }
       ]
     }
-  ]
+  ],
+  "public": true
 } 
