--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 flask==2.0.1
+werkzeug==1.0.1
 youtube-transcript-api==0.6.1
 openai==1.3.0
 flask-cors==4.0.0
 python-dotenv==1.0.0
-requests==2.31.0 
+requests==2.31.0
+httpx==0.24.1 
