fix: simplify Flask app for Vercel compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,10 @@
       "use": "@vercel/python"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "api/index.py"
+      "src": "/(.*)",
+      "dest": "api/index.py"
     }
   ],
   "headers": [
@@ -22,5 +22,6 @@
       ]
     }
   ],
-  "public": true
+  "public": true,
+  "regions": ["iad1"]
 } 
