--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,8 @@
       "use": "@vercel/python"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/index.py"
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "api/index.py" }
   ],
   "headers": [
     {
