--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,11 @@
       ]
     }
   ],
+  "functions": {
+    "api/index.py": {
+      "maxDuration": 60
+    }
+  },
   "public": true,
   "regions": ["iad1"]
 } 
