--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
 .vercel
+__pycache__/
+*.py[cod]
+*$py.class
+.env
+.env.local
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+.vscode/
+.idea/
+.DS_Store
