--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,10 @@ python-dotenv==1.0.0
 requests==2.31.0
 httpx==0.24.1 
 google-generativeai==0.8.4
+PyJWT==2.8.0
+redis==5.0.1
+stripe==7.9.0
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+Flask-Login==0.6.3
+authlib==1.3.0
