Fix Google Sign-In button visibility and configuration
- Update manifest.json to allow Google Identity Services
- Remove unnecessary config.py endpoint
- Update auth.js to use direct Google Client ID from manifest
- Fix button styling and initialization
- Add proper error handling and logging

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -35,6 +35,6 @@
     ]
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; connect-src https://new-ycg.vercel.app;"
+    "extension_pages": "script-src 'self' https://accounts.google.com/gsi/client; connect-src 'self' https://accounts.google.com https://new-ycg.vercel.app;"
   }
 }
