Fix Google login issues and add monetization implementation plan

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,14 @@ OPENAI_API_KEY=your_openai_api_key_here
 
 # Webshare proxy credentials (for avoiding IP blocks)
 WEBSHARE_USERNAME=your_webshare_username
-WEBSHARE_PASSWORD=your_webshare_password 
+WEBSHARE_PASSWORD=your_webshare_password
+
+# Authentication
+JWT_SECRET_KEY=your_jwt_secret_key_here
+
+# Database
+REDIS_URL=your_redis_url_here
+
+# Payment processing
+STRIPE_API_KEY=your_stripe_api_key_here
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
