--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,12 @@ python-dotenv==1.0.0
 requests==2.31.0
 httpx==0.24.1 
 google-generativeai==0.8.4
-PyJWT==2.8.0
-redis==5.0.1
+# PyJWT==2.8.0 # Replaced by python-jose
+redis==5.0.1 # Standard redis client
+aioredis>=2.0.1 # Asynchronous redis client
+passlib>=1.7.4 # For password hashing
+bcrypt>=3.2.0 # Required by passlib[bcrypt]
+python-jose[cryptography]>=3.3.0 # For JWT handling
 stripe==7.9.0
 google-auth==2.27.0
 google-auth-oauthlib==1.2.0
