--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,7 @@
     }
   ],
   "rewrites": [
+    { "source": "/api/(.*)", "destination": "api/index.py" },
     { "source": "/(.*)", "destination": "api/index.py" }
   ],
   "headers": [
@@ -21,4 +22,4 @@
   ],
   "public": true,
   "regions": ["iad1"]
-} 
+}
