Migrate backend from Flask to Sanic (async, blueprints, responses, cleanup)

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,8 +6,7 @@
   "permissions": ["activeTab", "storage", "identity"],
   "host_permissions": [
     "https://www.youtube.com/*",
-    "https://new-ycg.vercel.app/*",
-    "https://www.googleapis.com/*"
+    "https://new-ycg.vercel.app/*"
   ],
   "action": {
     "default_popup": "popup.html",
@@ -36,6 +35,6 @@
     ]
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' https://new-ycg.vercel.app https://www.googleapis.com;"
+    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' https://new-ycg.vercel.app;"
   }
 }
