--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-flask[async]==2.0.1 # Install with async support (adds asgiref) - Required for async views on Vercel
+# Flask and Flask extensions removed as part of Sanic migration
 werkzeug==2.0.3
 youtube-transcript-api==1.0.2
 openai==1.7.0
-flask-cors==4.0.0
 python-dotenv==1.0.0
 requests==2.31.0
 httpx==0.24.1 
@@ -19,5 +18,5 @@ email-validator>=2.0.0 # Required by pydantic for EmailStr validation
 stripe==7.9.0
 google-auth==2.27.0
 google-auth-oauthlib==1.2.0
-Flask-Login==0.6.3
 authlib==1.3.0
+sanic>=23.12.0
