--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # Flask and Flask extensions removed as part of Sanic migration
 werkzeug==2.0.3
 youtube-transcript-api==1.0.2
+fastapi>=0.110.0
+uvicorn[standard]>=0.27.0
 openai==1.7.0
 python-dotenv==1.0.0
 requests==2.31.0
@@ -19,5 +21,3 @@ stripe==7.9.0
 google-auth==2.27.0
 google-auth-oauthlib==1.2.0
 authlib==1.3.0
-sanic-ext>=23.12.0
-sanic>=23.12.0
