--- a/requirements.txt
+++ b/requirements.txt
@@ -21,4 +21,4 @@ google-auth==2.27.0
 google-auth-oauthlib==1.2.0
 authlib==1.3.0
 fastapi-limiter>=0.1.5
-aioredis>=2.0.1
+# Removed aioredis dependency (caused distutils error on Vercel)
