--- a/requirements.txt
+++ b/requirements.txt
@@ -20,5 +20,5 @@ stripe==7.9.0
 google-auth==2.27.0
 google-auth-oauthlib==1.2.0
 authlib==1.3.0
-fastapi-limiter>=0.1.5
+slowapi>=0.1.8
 # Removed aioredis dependency (caused distutils error on Vercel)
