--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -18,7 +18,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.youtube.com/*"],
+      "matches": ["https://www.youtube.com/watch*"],
       "js": ["content.js"]
     }
   ],
