--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ werkzeug==2.0.3
 youtube-transcript-api==1.0.2
 fastapi>=0.110.0
 uvicorn[standard]>=0.27.0
-openai==1.7.0
+openai>=1.75.0
 python-dotenv==1.0.0
 httpx==0.24.1 
 google-generativeai==0.8.4
