--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ uvicorn[standard]>=0.27.0
 openai>=1.75.0
 python-dotenv==1.0.0
 httpx==0.24.1 
+httpcore>=1.0.3
 google-generativeai==0.8.4
 # PyJWT==2.8.0 # Replaced by python-jose
 redis==5.0.1 # Standard redis client (Keep in case sync operations are needed elsewhere)
