--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,7 @@ REDIS_URL=your_redis_url_here
 
 # Payment processing
 STRIPE_API_KEY=your_stripe_api_key_here
-STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_PUBLISHABLE_KEY=pk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
+FRONTEND_URL=http://localhost:3000
