--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,7 @@
     }
   ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "api/index.py" },
-    { "source": "/(.*)", "destination": "api/index.py" }
+    { "source": "/api/(.*)", "destination": "api/index.py" }
   ],
   "headers": [
     {
