--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
     }
   ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "api/index.py" }
+    { "source": "/api/(.*)", "destination": "api/index.py" },
+    { "source": "/v1/(.*)", "destination": "api/index.py" }
   ],
   "headers": [
     {
