Migrate YouTube transcript fetching from youtube-transcript-api to pytubefix
- Replace youtube-transcript-api with pytubefix for improved reliability
- Rewrite fetch_transcript() function to use pytubefix API
- Add SRT parsing functions for transcript format conversion
- Update all test files to use pytubefix
- Remove complex proxy retry logic (simplified implementation)
- Add proper error handling for pytubefix-specific exceptions
- Maintain compatibility with existing transcript format
- Update documentation to reflect the migration

Benefits:
- No more XML parsing errors
- Better handling of YouTube's anti-bot measures
- Simplified codebase with active maintenance
- Improved language preference support

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Flask and Flask extensions removed as part of Sanic migration
 werkzeug==2.0.3
-youtube-transcript-api==1.0.2
+pytubefix
 fastapi>=0.110.0
 uvicorn[standard]>=0.27.0
 openai>=1.75.0
